--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -14,11 +14,9 @@ jobs:
 
     - name: Install dependencies
       run: | 
-        pwd
-        ls -lsa
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        pip install -r requirements.txt 
+        pip install -r ./api_yamdb/requirements.txt 
 
     - name: Test with flake8 and pytest
       run: |
