--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -28,7 +28,7 @@ jobs:
         pytest
 
   build_and_push_to_docker_hub:
-    name: Push Docker image to Docker Hub
+    name: Push Docker image to Docker Hub.
     runs-on: ubuntu-latest
     needs: tests
     if: github.ref == 'refs/heads/master'
