--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -75,6 +75,7 @@ jobs:
             echo "DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}" >> .env
             echo DEBUG=${{ secrets.DEBUG }} >> .env
             echo "ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }}" >> .env
+            echo USE_SQLITE=${{ secrets.USE_SQLITE }} >> .env
             sudo docker-compose up -d
 
   send_message:
