--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,7 +1,22 @@
 server {
-  listen 8080;
+  listen 80;
   server_name localhost;
   server_tokens off;
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+  location / {
+    return 301 https://$host$request_uri;
+  }    
+}
+server {
+  listen 443 ssl;
+  server_name localhost;
+  server_tokens off;
+  ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
   location /static/ {
     root /var/html/;
   }
