--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -41,7 +41,7 @@ jobs:
         with:
           context: ./api_yamdb/
           push: true
-          tags: gritsenkoserge/yamdb:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -55,6 +55,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
+            sudo docker stop $(sudo docker ps -a -q)
             sudo docker-compose stop
             sudo docker-compose rm web
             touch .env
