--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -47,7 +47,7 @@ jobs:
         with:
           context: ./api_yamdb/
           push: true
-          tags: gritsenkoserge/yamdb:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -63,6 +63,8 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd yamdb_infra
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
+            sudo docker stop $(sudo docker ps -a -q)
             sudo docker-compose stop
             sudo docker-compose rm web
             touch .env
