--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -3,14 +3,18 @@ name: Yamdb workflow
 on: [push]
 
 jobs:
+
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.7
+        python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
       run: | 
@@ -20,12 +24,14 @@ jobs:
 
     - name: Test with flake8 and pytest
       run: |
-        python -m flake8
+        flake8 .
         pytest
+
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2 
@@ -42,6 +48,7 @@ jobs:
           context: ./api_yamdb/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/yamdb:latest
+
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -55,6 +62,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
+            cd yamdb_infra
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
             sudo docker stop $(sudo docker ps -a -q)
             sudo docker-compose stop
@@ -66,8 +74,12 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            echo DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }} >> .env
+            echo "DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}" >> .env
+            echo DEBUG=${{ secrets.DEBUG }} >> .env
+            echo "ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }}" >> .env
+            echo USE_SQLITE=${{ secrets.USE_SQLITE }} >> .env
             sudo docker-compose up -d
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
