--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -75,6 +75,7 @@ jobs:
             echo DEBUG=${{ secrets.DEBUG }} >> .env
             echo "ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }}" >> .env
             echo USE_SQLITE=${{ secrets.USE_SQLITE }} >> .env
+            echo "SENTRY_SDK_DSN=${{ secrets.SENTRY_SDK_DSN }}" >> .env
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
             sudo docker-compose up -d
 
