modify workflow for move to yamdb.gricen.ru

--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name gritsenko.hopto.org;
+  server_name yamdb.gricen.ru;
   server_tokens off;
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
@@ -11,10 +11,10 @@ server {
 }
 server {
   listen 443 ssl;
-  server_name gritsenko.hopto.org;
+  server_name yamdb.gricen.ru;
   server_tokens off;
-  ssl_certificate /etc/letsencrypt/live/gritsenko.hopto.org/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/gritsenko.hopto.org/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/yamdb.gricen.ru/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/yamdb.gricen.ru/privkey.pem;
   include /etc/letsencrypt/options-ssl-nginx.conf;
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
   location /static/ {
