--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -63,12 +63,8 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd yamdb_infra
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
-            sudo docker stop $(sudo docker ps -a -q)
-            sudo docker-compose stop
-            sudo docker-compose rm web
-            touch .env
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            sudo docker-compose down
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} > .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
@@ -78,6 +74,9 @@ jobs:
             echo DEBUG=${{ secrets.DEBUG }} >> .env
             echo "ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }}" >> .env
             echo USE_SQLITE=${{ secrets.USE_SQLITE }} >> .env
+            echo "SENTRY_SDK_DSN=${{ secrets.SENTRY_SDK_DSN }}" >> .env
+            sudo docker image rm ${{ secrets.DOCKER_USERNAME }}/yamdb
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
             sudo docker-compose up -d
 
   send_message:
