--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -63,8 +63,7 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd yamdb_infra
-            sudo docker-compose stop
-            sudo docker-compose rm web
+            sudo docker-compose down
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} > .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
@@ -76,6 +75,7 @@ jobs:
             echo "ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }}" >> .env
             echo USE_SQLITE=${{ secrets.USE_SQLITE }} >> .env
             echo "SENTRY_SDK_DSN=${{ secrets.SENTRY_SDK_DSN }}" >> .env
+            sudo docker image rm ${{ secrets.DOCKER_USERNAME }}/yamdb
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
             sudo docker-compose up -d
 
