--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -20,23 +20,14 @@ services:
   nginx:
     image: nginx:1.21.3-alpine
     ports:
-      - "80:80"
-      - "443:443"
+      - "1180:80"
+      - "11443:443"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /var/www/certbot:/var/www/certbot
       - static_value:/var/html/static/
       - media_value:/var/html/media/
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
-    depends_on:
-      - web
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     depends_on:
       - web
 volumes:
